Bug 302872 - automatic detection of maximum tile level does not work for themes with absolute sourcedirs
Summary: automatic detection of maximum tile level does not work for themes with absol...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-02 08:17 UTC by Bernhard Beschow
Modified: 2012-07-24 20:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2012-07-02 08:17:56 UTC
When <sourcedir maximumTileLevel="..." /> is not present, the maximum tile level isn't detected automatically for absolute paths.

Reproducible: Always

Steps to Reproduce:
1. Pick a map theme, e.g. opencyclemap.
2. Make sure the maximumTileLevel attribute is missing in <sourcedir/> of the first texture layer.
3. Make the sourcedir of the same texture layer absolute and create the folder.
4. Copy the whole content of the original foloder to the new folder (including all tiles, esp. base tiles).
5. Start Marble with opencyclemap
Actual Results:  
On every zoom level, only the base tile is shown and no new tiles are downloaded.

Expected Results:  
Marble should show all present tiles and download new tiles as necessary.
Comment 1 Bernhard Beschow 2012-07-02 08:56:59 UTC
Git commit 64124d4ed916168bf5a084d421b4a449c35b99d6 by Bernhard Beschow.
Committed on 02/07/2012 at 10:19.
Pushed by beschow into branch 'master'.

fix automatic detection of maximum tile level for abolute sourcedirs

M  +2    -1    src/lib/TileLoader.cpp

http://commits.kde.org/marble/64124d4ed916168bf5a084d421b4a449c35b99d6
Comment 2 Bernhard Beschow 2012-07-02 09:47:29 UTC
Git commit 697f91ac5dec27cd6a6b38801576b2959093fa8b by Bernhard Beschow.
Committed on 02/07/2012 at 10:19.
Pushed by beschow into branch 'KDE/4.9'.

fix automatic detection of maximum tile level for abolute sourcedirs
(cherry picked from commit 64124d4ed916168bf5a084d421b4a449c35b99d6)

M  +2    -1    src/lib/TileLoader.cpp

http://commits.kde.org/marble/697f91ac5dec27cd6a6b38801576b2959093fa8b
Comment 3 Dennis Nienhüser 2012-07-24 20:48:50 UTC
Git commit 0c403879421113b221e99a50b44573a7e35d209b by Dennis Nienhüser, on behalf of Bernhard Beschow.
Committed on 02/07/2012 at 10:19.
Pushed by nienhueser into branch 'sok-2012-plasma-active'.

fix automatic detection of maximum tile level for abolute sourcedirs

M  +2    -1    src/lib/TileLoader.cpp

http://commits.kde.org/marble/0c403879421113b221e99a50b44573a7e35d209b