fix automatic detection of maximum tile level for abolute sourcedirs

BUG: 302872
(cherry picked from commit 64124d4ed916168bf5a084d421b4a449c35b99d6)